--- a/#src/_2intro.html
+++ b/#src/_2intro.html
@@ -1,8 +1,8 @@
 <section class="intro">
    <div class="intro__container _container">
       <div class="intro__info">
-         <h1 data-aos="fadeInUp">Veterinary staffing done right.</h1>
-         <p data-aos="fadeInUp">IndeVets is on a mission to make veterinary medicine better. We unite the nation’s top veterinarians and
+         <h1>Veterinary staffing done right.</h1>
+         <p>IndeVets is on a mission to make veterinary medicine better. We unite the nation’s top veterinarians and
             animal hospitals to deliver what matters most in animal care –– happy, healthy doctors performing at their
             best.</p>
       </div>
@@ -12,7 +12,7 @@
    </div>
 </section>
 <div class="intro__blocks _block">
-   <div class="_block__item _item element_animation" data-aos="flip-left">
+   <div class="_block__item _item element_animation">
       <div class="_item__pic">
          <span class="_icon-veterinars"></span>
       </div>
@@ -21,7 +21,7 @@
          <p>Apply to become an IndeVet</p>
       </div>
    </div>
-   <div class="_block__item _items element_animation" data-aos="flip-right">
+   <div class="_block__item _items element_animation>
       <div class="_item__pic">
          <span class="_icon-hospitals"></span>
       </div>
