--- a/#src/_2intro.html
+++ b/#src/_2intro.html
@@ -6,7 +6,7 @@
             animal hospitals to deliver what matters most in animal care –– happy, healthy doctors performing at their
             best.</p>
       </div>
-      <div class="intro__pic element_animation" data-aos="zoom-out-up" >
+      <div class="intro__pic element_animation" >
          <span class="_icon-intro"></span>
       </div>
    </div>
