--- a/test/index.html
+++ b/test/index.html
@@ -43,7 +43,7 @@
 				<li><a href="">Why IndeVets?</a></li>
 			</ul>
 			<div class="header__button">
-				<a href="" class="button">Login</a>
+				<a href="" class="button">Logi1n</a>
 			</div>
 		</div>
 	</div>
@@ -52,18 +52,18 @@
 			<section class="intro">
    <div class="intro__container _container">
       <div class="intro__info">
-         <h1 data-aos="fadeInUp">Veterinary staffing done right.</h1>
-         <p data-aos="fadeInUp">IndeVets is on a mission to make veterinary medicine better. We unite the nation’s top veterinarians and
+         <h1>Veterinary staffing done right.</h1>
+         <p>IndeVets is on a mission to make veterinary medicine better. We unite the nation’s top veterinarians and
             animal hospitals to deliver what matters most in animal care –– happy, healthy doctors performing at their
             best.</p>
       </div>
-      <div class="intro__pic element_animation" data-aos="zoom-out-up" >
+      <div class="intro__pic element_animation" >
          <span class="_icon-intro"></span>
       </div>
    </div>
 </section>
 <div class="intro__blocks _block">
-   <div class="_block__item _item element_animation" data-aos="flip-left">
+   <div class="_block__item _item element_animation">
       <div class="_item__pic">
          <span class="_icon-veterinars"></span>
       </div>
@@ -72,7 +72,7 @@
          <p>Apply to become an IndeVet</p>
       </div>
    </div>
-   <div class="_block__item _items element_animation" data-aos="flip-right">
+   <div class="_block__item _items element_animation>
       <div class="_item__pic">
          <span class="_icon-hospitals"></span>
       </div>
@@ -85,23 +85,23 @@
 			<section class="works">
    <div class="works__container _container">
       <div class="works__title">
-         <span data-aos="fadeInUp">
+         <span>
             Let’s start at the beginning
          </span>
-         <h2 data-aos="fadeInUp">How IndeVets Works</h2>
+         <h2>How IndeVets Works</h2>
       </div>
       <div class="works__items _item">
          <div class="_item__work">
-            <div class="_work__pic" data-aos="flip-right">
+            <div class="_work__pic">
                <div class="z element_animation">
                   <span class="_icon-baraban">
                   </span>
                </div>
             </div>
             <div class="_work__info">
-               <span data-aos="fadeInUp">Step one...</span>
-               <h3 data-aos="fadeInUp">We hire great vets.</h3>
-               <p data-aos="fadeInUp">Not just any doctor can become an IndeVet. We thoroughly vet and hire only the best, highly qualified
+               <span>Step one...</span>
+               <h3>We hire great vets.</h3>
+               <p>Not just any doctor can become an IndeVet. We thoroughly vet and hire only the best, highly qualified
                   doctors. They become a part of our team, earn market-leading pay and benefits, and gain the freedom to
                   choose when and where they work.</p>
             </div>
@@ -110,14 +110,14 @@
       <div class="works__items _item ">
          <div class="_item__work truba">
             <div class="_work__info">
-               <span data-aos="fadeInUp">Next...</span>
-               <h3 data-aos="fadeInUp">We partner with the best workplaces.</h3>
-               <p data-aos="fadeInUp">We’ve built partnerships with more than 800 forward-thinking, best-in-class hospitals. We expect a lot
+               <span>Next...</span>
+               <h3>We partner with the best workplaces.</h3>
+               <p>We’ve built partnerships with more than 800 forward-thinking, best-in-class hospitals. We expect a lot
                   from our vets, so the same applies to our hospitals. We partner with hospitals that not only have high
                   medical standards, but also have a commitment to maintaining a healthy workplace for staff and
                   patients.</p>
             </div>
-            <div class="_work__pic" data-aos="flip-right">
+            <div class="_work__pic">
                <div class="z element_animation">
                   <span class="_icon-truba"></span>
                </div>
@@ -126,15 +126,15 @@
       </div>
       <div class="works__items _item">
          <div class="_item__work _work">
-            <div class="_work__pic" data-aos="flip-right">
+            <div class="_work__pic">
                <div class="z element_animation">
                   <span class="_icon-friends"></span>
                </div>
             </div>
             <div class="_work__info">
-               <span data-aos="fadeInUp">The result?</span>
-               <h3 data-aos="fadeInUp">Happy vets. Happy hospitals. Better medicine.</h3>
-               <p data-aos="fadeInUp">When doctors are in control of their schedules, they’re happier. Same goes for hospital teams who can
+               <span>The result?</span>
+               <h3>Happy vets. Happy hospitals. Better medicine.</h3>
+               <p>When doctors are in control of their schedules, they’re happier. Same goes for hospital teams who can
                   breathe easier about their staffing. Together, our doctors and hospital partners are making the world
                   of veterinary medicine a better, happier place.</p>
             </div>
@@ -152,8 +152,8 @@
       <div class="mission__info">
          <span data-aos="fadeInUp">Who We Are</span>
          <h2 data-aos="fadeInUp">Our Mission</h2>
-         <p data-aos="fadeInUp">Our team is united by a mission to make veterinary medicine better. We’ve been through the long rotations,
-            the office drama, and the last-minute schedule changes. It drove the joy out of our jobs and, more
+         <p data-aos="fadeInUp">Oиr team is united by a mission to make veterinary medicine better. We’ve been through the long rotations,
+            the office drama, аand the last-minute schedule changes. It drove the joy out of our jobs and, more
             importantly, out of our lives. So we took it upon ourselves to make a change.</p>
          <div>
             <a href="" data-aos="zoom-in">Why IndeVets?</a>
@@ -231,15 +231,15 @@
 </footer>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js">
-</script> 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js">
+</script>  -->
+<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
-<script src="js/jquery.waypoints.js"></script>
+<!-- <script src="js/jquery.waypoints.js"></script> -->
 <script src="js/vendors.min.js"></script>
 <script src="js/app.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
-<script>
+<!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  -->
+<!-- <script>
    AOS.init({
       offset: 300,
       duration: 300,
@@ -248,7 +248,7 @@
       once: false,
       placement: "top-top",
    });
-</script>
+</script> -->
 
 </body>
 
