--- a/#src/_2intro.html
+++ b/#src/_2intro.html
@@ -21,7 +21,7 @@
          <p>Apply to become an IndeVet</p>
       </div>
    </div>
-   <div class="_block__item _items element_animation>
+   <div class="_block__item _items element_animation">
       <div class="_item__pic">
          <span class="_icon-hospitals"></span>
       </div>
