--- a/#src/_2intro.html
+++ b/#src/_2intro.html
@@ -28,6 +28,6 @@
       <div class="_item__info">
          <span>Hospitals</span>
          <p>Become an IndeVets partner</p>
-      </div>
+      </div>d
    </div>
 </div>
