--- a/#src/_2intro.html
+++ b/#src/_2intro.html
@@ -27,7 +27,7 @@
       </div>
       <div class="_item__info">
          <span>Hospitals</span>
-         <p>Become an IndeVets partner</p>
+         <p>Become an IndeVets partnerssssssss</p>
       </div>
    </div>
 </div>
