--- a/#src/_1header.html
+++ b/#src/_1header.html
@@ -5,13 +5,13 @@
 				<span>IndeVets</span>
 			</div>
 			@@include('_burger.html',{})
-			<ul class="header__list">
-				<li><a href="">Veterinarians</a></li>
-				<li><a href="">Hospitals</a></li>
-				<li><a href="">Why IndeVets?</a></li>
+			<ul class="header__list header-list">
+				<li class="header-list__item"><a href="#" class="header-list__link">Veterinarians</a></li>
+				<li class="header-list__item"><a href="#" class="header-list__link">Hospitals</a></li>
+				<li class="header-list__item"><a href="#" class="header-list__link">Why IndeVets?</a></li>
 			</ul>
-			<div class="header__button">
-				<a href="" class="button">Logi1n</a>
+			<div class="header__button header-button">
+				<a href="" class="header-button__link">Logi1n</a>
 			</div>
 		</div>
 	</div>
