--- a/#src/_3works.html
+++ b/#src/_3works.html
@@ -1,23 +1,23 @@
 <section class="works">
    <div class="works__container _container">
-      <div class="works__title">
-         <span>
+      <div class="works__title work-title">
+         <span class="work-title__slogan">
             Let’s start at the beginning
          </span>
-         <h2>How IndeVets Works</h2>
+         <h2 class="work-title__title">How IndeVets Works</h2>
       </div>
       <div class="works__items _item">
          <div class="_item__work">
-            <div class="_work__pic">
-               <div class="z element_animation">
+            <div class="_work__pic work-pic">
+               <div class="element_animation work-pic__img">
                   <span class="_icon-baraban">
                   </span>
                </div>
             </div>
             <div class="_work__info">
-               <span>Step one...</span>
-               <h3>We hire great vets.</h3>
-               <p>Not just any doctor can become an IndeVet. We thoroughly vet and hire only the best, highly qualified
+               <span class="work-info__step">Step one...</span>
+               <h3 class="work-info__name">We hire great vets.</h3>
+               <p class="work-info__descr">Not just any doctor can become an IndeVet. We thoroughly vet and hire only the best, highly qualified
                   doctors. They become a part of our team, earn market-leading pay and benefits, and gain the freedom to
                   choose when and where they work.</p>
             </div>
@@ -26,15 +26,15 @@
       <div class="works__items _item ">
          <div class="_item__work truba">
             <div class="_work__info">
-               <span>Next...</span>
-               <h3>We partner with the best workplaces.</h3>
-               <p>We’ve built partnerships with more than 800 forward-thinking, best-in-class hospitals. We expect a lot
+               <span class="work-info__step">Next...</span>
+               <h3 class="work-info__name">We partner with the best workplaces.</h3>
+               <p class="work-info__descr">We’ve built partnerships with more than 800 forward-thinking, best-in-class hospitals. We expect a lot
                   from our vets, so the same applies to our hospitals. We partner with hospitals that not only have high
                   medical standards, but also have a commitment to maintaining a healthy workplace for staff and
                   patients.</p>
             </div>
-            <div class="_work__pic">
-               <div class="z element_animation">
+            <div class="_work__pic work-pic">
+               <div class="element_animation work-pic__img">
                   <span class="_icon-truba"></span>
                </div>
             </div>
@@ -42,15 +42,15 @@
       </div>
       <div class="works__items _item">
          <div class="_item__work _work">
-            <div class="_work__pic">
-               <div class="z element_animation">
+            <div class="_work__pic work-pic">
+               <div class="element_animation work-pic__img">
                   <span class="_icon-friends"></span>
                </div>
             </div>
-            <div class="_work__info">
-               <span>The result?</span>
-               <h3>Happy vets. Happy hospitals. Better medicine.</h3>
-               <p>When doctors are in control of their schedules, they’re happier. Same goes for hospital teams who can
+            <div class="_work__info work-info">
+               <span class="work-info__step">The result?</span>
+               <h3 class="work-info__name">Happy vets. Happy hospitals. Better medicine.</h3>
+               <p class="work-info__descr">When doctors are in control of their schedules, they’re happier. Same goes for hospital teams who can
                   breathe easier about their staffing. Together, our doctors and hospital partners are making the world
                   of veterinary medicine a better, happier place.</p>
             </div>
