--- a/#src/_4mission.html
+++ b/#src/_4mission.html
@@ -1,18 +1,18 @@
 <section class="mission">
    <div class="mission__container _container">
-      <div class="mission__pic element_animation" data-aos="zoom-in-left">
+      <div class="mission__pic element_animation">
          <div>
             <span class="_icon-vets"></span>
          </div>
       </div>
-      <div class="mission__info">
-         <span data-aos="fadeInUp">Who We Are</span>
-         <h2 data-aos="fadeInUp">Our Mission</h2>
-         <p data-aos="fadeInUp">Oиr team is united by a mission to make veterinary medicine better. We’ve been through the long rotations,
+      <div class="mission__info mission-info">
+         <span class="mission-info__slogan">Who We Are</span>
+         <h2 class="mission-info__title">Our Mission</h2>
+         <p class="mission-info__descr">Oиr team is united by a mission to make veterinary medicine better. We’ve been through the long rotations,
             the office drama, аand the last-minute schedule changes. It drove the joy out of our jobs and, more
             importantly, out of our lives. So we took it upon ourselves to make a change.</p>
-         <div>
-            <a href="" data-aos="zoom-in">Why IndeVets?</a>
+         <div class="mission-info__question question">
+            <a href="#" class="question__link">Why IndeVets?</a>
          </div>
 
       </div>
