--- a/#src/_5sounds.html
+++ b/#src/_5sounds.html
@@ -1,15 +1,15 @@
 <section class="sounds">
    <div class="sounds__container _container">
-      <div class="sounds__pic" data-aos="slide-right">
+      <div class="sounds__pic">
          <div>
             <span class="_icon-bike"></span>
          </div>
       </div>
-      <div class="sounds__info">
-         <h2 data-aos="fadeInUp">Sounds pretty good, right? Let’s do this.</h2>
-         <div data-aos="fadeInUp">
-            <p>I want to be an IndeVet. Take me to the application page!</p>
-            <p>
+      <div class="sounds__info sounds-info">
+         <h2 class="sounds-info__title">Sounds pretty good, right? Let’s do this.</h2>
+         <div class="sounds-info__offer offer">
+            <p class="offer__descr">I want to be an IndeVet. Take me to the application page!</p>
+            <p class="offer__descr">
                We want to be one of your awesome hospital partners.
             </p>
          </div>
