--- a/#src/_6footer.html
+++ b/#src/_6footer.html
@@ -3,7 +3,7 @@
 		<div class="footer__left">
 			<div class="footer__lists _list">
 				<div class="_lists">
-					<ul class="_list__footer">
+					<ul class="_list__footer list-footer">
 						<li class="main-item"><a href="" class="main-link">Veterinarians</a></li>
 						<li class="link"><a href="">Explore IndeVets</a></li>
 						<li class="link"><a href="">Become an IndeVet</a></li>
