--- a/#src/_2intro.html
+++ b/#src/_2intro.html
@@ -1,8 +1,8 @@
 <section class="intro">
    <div class="intro__container _container">
-      <div class="intro__info">
-         <h1>Veterinary staffing done right.</h1>
-         <p>IndeVets is on a mission to make veterinary medicine better. We unite the nation’s top veterinarians and
+      <div class="intro__info intro-info">
+         <h1 class="intro-info__title">Veterinary staffing done right.</h1>
+         <p class="intro-info__descr">IndeVets is on a mission to make veterinary medicine better. We unite the nation’s top veterinarians and
             animal hospitals to deliver what matters most in animal care –– happy, healthy doctors performing at their
             best.</p>
       </div>
@@ -16,9 +16,9 @@
       <div class="_item__pic">
          <span class="_icon-veterinars"></span>
       </div>
-      <div class="_item__info">
-         <span>Veterinarians</span>
-         <p>Apply to become an IndeVet</p>
+      <div class="_item__info item-info">
+         <span class="item-info__name">Veterinarians</span>
+         <p class="item-info__descr">Apply to become an IndeVet</p>
       </div>
    </div>
    <div class="_block__item _items element_animation">
@@ -26,8 +26,8 @@
          <span class="_icon-hospitals"></span>
       </div>
       <div class="_item__info">
-         <span>Hospitals</span>
-         <p>Become an IndeVets partnerssssssss</p>
+         <span class="item-info__name">Hospitals</span>
+         <p class="item-info__descr">Become an IndeVets partner</p>
       </div>
    </div>
 </div>
